# hearth

./: .env.release.example  .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  vitest.config.ts
.github/workflows/: release-cli.yml
assets/app-preview/: composition.html  hyperframes.json  index.html  meta.json
assets/app-preview/placeholders/: README.md
docs/: RELEASE-MAS.md  hearth-cli-ko.md  install-ko.md  releasing.md
docs/superpowers/: ideas-backlog.md
docs/superpowers/app-store/: description-en.md  description-ko.md  iap-product.md  keywords-en.md  keywords-ko.md  privacy-policy.md  review-notes.md  what-is-new.md
docs/superpowers/handoff/: 2026-04-23-hearth-cli-complete.md  2026-04-23-next-session-prompt.md
docs/superpowers/ideas/: 2026-04-26-ai-agent-control-surface.md
docs/superpowers/plans/: 2026-04-16-hearth.md  2026-04-16-project-genie.md  2026-04-16-redesign-and-ai-fix.md  2026-04-16-tool-calling-integration-tests.md  2026-04-17-projects-view-enhancements.md  2026-04-17-settings-categories-context-menus.md  2026-04-18-schedule-notifications-autostart.md  2026-04-18-tauri-release.md  2026-04-19-quick-capture.md  2026-04-22-hearth-cli.md  2026-04-22-theme-customization.md  2026-04-23-hearth-auto-deploy.md  2026-04-23-hearth-skills.md  2026-04-27-landing-lite.md  2026-05-06-focus-memo-board.md
docs/superpowers/specs/: 2026-04-16-hearth-design.md  2026-04-16-project-genie-design.md  2026-04-16-redesign-and-ai-fix-design.md  2026-04-16-tool-calling-integration-tests-design.md  2026-04-17-projects-view-enhancements-design.md  2026-04-17-settings-categories-context-menus-design.md  2026-04-22-hearth-cli-design.md  (+11 more)
scripts/: build-mas.sh  bump-build-number.js  bump-version.sh  check-signing.sh  extract-release-notes.sh  generate-manifest.sh  install-skills.sh  install.sh  release.sh  seed-screenshots.ts  smoke-skills.sh  sync-version.js  upload-mas.sh
scripts/seed-data/: en.json  ko.json
scripts/tests/: test_bump_version.sh  test_install.sh  test_install_skills.sh
skills/: README.md
skills/hearth/: SKILL.md
skills/hearth-memo-organize/: SKILL.md
skills/hearth-project-scan/: SKILL.md
skills/hearth-today-brief/: SKILL.md
src/: App.css  App.tsx  api.ts  main.tsx  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/app/: Cargo.toml  entitlements.mas.plist  tauri.conf.json  tauri.mas.conf.json
src-tauri/app/capabilities/: default.json
src-tauri/app/src/: ai_tools.rs  bookmark.rs  cmd_actions.rs  cmd_ai.rs  cmd_backup.rs  cmd_categories.rs  cmd_clients.rs  cmd_memos.rs  cmd_migration.rs  cmd_notify.rs  cmd_projects.rs  cmd_schedules.rs  cmd_settings.rs  db.rs  lib.rs  main.rs  models.rs  watcher.rs
src-tauri/app/tests/: categories.rs  memo_by_number.rs  tool_calling_integration.rs
src-tauri/capabilities/: default.json  quick-capture.json
src-tauri/cli/: Cargo.toml
src-tauri/cli/src/: db.rs  main.rs  util.rs
src-tauri/cli/src/cmd/: category.rs  export.rs  import.rs  log.rs  memo.rs  memo_tag.rs  mod.rs  project.rs  schedule.rs  search.rs  views.rs
src-tauri/cli/tests/: smoke.rs
src-tauri/core/: Cargo.toml
src-tauri/core/src/: audit.rs  categories.rs  clients.rs  db.rs  export.rs  lib.rs  memos.rs  models.rs  projects.rs  scan.rs  schedules.rs  search.rs  views.rs
src-tauri/icons/: icon.icns
src-tauri/src/: ai_tools.rs  cmd_actions.rs  cmd_ai.rs  cmd_autostart.rs  cmd_backup.rs  cmd_categories.rs  cmd_memos.rs  cmd_notify.rs  cmd_quick_capture.rs  cmd_schedules.rs  cmd_settings.rs  db.rs  excel_import.rs  lib.rs  models.rs
src-tauri/tests/: backup_dir.rs  categories.rs  reset_data.rs  tool_calling_integration.rs
src/__tests__/: QuickCapture.test.tsx  setup.ts
src/command/: CommandEmpty.tsx  CommandInput.tsx  CommandPalette.tsx  CommandResults.tsx  buildSystemPrompt.ts  dispatch.ts  executeAiAction.ts  types.ts  useCommandState.ts
src/components/: AiPanel.tsx  AiSettingsDialog.tsx  AiStatusPill.tsx  CalendarView.tsx  ChatMessage.tsx  EmptyDropZone.tsx  FindPalette.tsx  FocusMemoBoard.tsx  FocusMemoNote.tsx  Layout.tsx  MemoBoard.tsx  MemoCard.tsx  MemoMatrix.tsx  MemoProjectPickerDialog.tsx  MemoRow.tsx  MemoTagPickerDialog.tsx  MigrationWizard.tsx  NewMemoDialog.tsx  NewProjectDialog.tsx  ProjectCard.tsx  ProjectDetailDialog.tsx  ProjectFormFields.tsx  ProjectList.tsx  ScheduleModal.tsx  SettingsAboutSection.tsx  SettingsAiSection.tsx  SettingsBackupSection.tsx  SettingsCategoriesSection.tsx  SettingsDialog.tsx  SettingsGeneralSection.tsx  SettingsIntegrationsSection.tsx  SettingsLicenseSection.tsx  SettingsThemeSection.tsx  Sidebar.tsx  TabBar.tsx  TopBar.tsx  memoActions.tsx
src/hooks/: useAi.ts  useAiStatus.ts  useAppUpdater.ts  useCategories.ts  useContextMenu.ts  useDbRecoveryNotice.ts  useMemoTags.ts  useMemos.ts  useProjects.ts  useQuickCaptureShortcut.ts  useSchedules.ts  useUiScale.ts
src/lib/: cn.ts  dbChangeBridge.test.tsx  dbChangeBridge.ts  dragTargets.ts  focusMemoLayout.ts  memoSequence.ts  shortcuts.ts
src/theme/: ThemeContext.tsx  applyTheme.ts  derive.ts  presets.ts  theme.css  types.ts
src/ui/: Badge.tsx  Button.tsx  ContextMenu.tsx  Dialog.tsx  EmptyState.tsx  Icon.tsx  Input.tsx  Kbd.tsx  Popover.tsx  Toast.tsx  Tooltip.tsx
src/windows/: QuickCapture.tsx
tasks/: d7-smoke.md
web/: astro.config.mjs  package.json  pnpm-lock.yaml  wrangler.jsonc
web/public/: robots.txt
(+37 files in other folders)
