[package]
name = "hearth-cli"
version = "0.9.3"
edition = "2021"
rust-version = "1.75"
license = "MIT"

[[bin]]
name = "hearth"
path = "src/main.rs"

[dependencies]
hearth-core = { path = "../core" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = "2"
predicates = "3"
