[package]
name = "hearth-core"
version = "0.9.1"
edition = "2021"
rust-version = "1.75"
license = "MIT"

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
